--- a/my-website.html
+++ b/my-website.html
@@ -12,7 +12,7 @@
      text-align: center;
     }
     body {
-        background-color: #f0f0f2;
+        background-image: url("https://images.pexels.com/photos/998641/pexels-photo-998641.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
         margin: 0;
         padding: 0;
         font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
